--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -3,7 +3,11 @@ ChangeLog for testdox.py
 TestDox generates a readable overview of test case names from the specified files.
 
 
-0.0.1-alpha  2010-09-01  (martin)
+0.1.2-alpha  2010-09-01  (martin)
+- Moved to pre-compiled regular expressions.
+- Extracted commonality of CppUnit and Boost.Test scanners to CppUnitKindScanner.
+
+0.1.1-alpha  2010-09-01  (martin)
 - Initial script with scanners for the Boost.Test and CppUnit frameworks and
   output builders for plain text and html.
 ___
