--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -3,9 +3,15 @@ ChangeLog for testdox.py
 TestDox generates a readable overview of test case names from the specified files.
 
 
+0.1.3-alpha  2010-09-02  (martin)
+- ADD: Added test/ directory.
+- ADD: Added option --title.
+- CHG: Renamed Formatters to plainTextWriter and SimpleHtmlWriter.
+- CHG: Renamed Formatter's print... functions to write... .
+
 0.1.2-alpha  2010-09-01  (martin)
-- Moved to pre-compiled regular expressions.
-- Extracted commonality of CppUnit and Boost.Test scanners to CppUnitKindScanner.
+- CHG: Moved to pre-compiled regular expressions.
+- CHG: Extracted commonality of CppUnit and Boost.Test scanners to CppUnitKindScanner.
 
 0.1.1-alpha  2010-09-01  (martin)
 - Initial script with scanners for the Boost.Test and CppUnit frameworks and
